--- a/pages/11550.html
+++ b/pages/11550.html
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8686/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8686/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -307,22 +307,28 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
- Jan-Erik Roos (died 15 December 2017) was a Swedish mathematician whose research interests were in Abelian category theory, homological algebra and related areas.</p>
+    <p>Jan-Erik Roos (16 October 1935 - 15 December 2017) was a Swedish mathematician whose research interests were in <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian</a> <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a>, <a class='existingWikiWord' href='/nlab/show/homological+algebra'>homological algebra</a> and related areas.</p>
+
+<ul>
+<li><a href='https://sv.wikipedia.org/wiki/Jan-Erik_Roos'>Wikipedia entry</a></li>
+</ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July  2, 2018 at 11:26:08.
+  Last revised on July  2, 2018 at 14:40:36.
   See the <a href="https://ncatlab.org/nlab/history/Jan-Erik Roos" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Jan-Erik+Roos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jan-Erik+Roos/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Jan-Erik+Roos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jan-Erik+Roos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Jan-Erik+Roos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jan-Erik+Roos/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Jan-Erik+Roos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jan-Erik+Roos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Jan-Erik Roos/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
