--- a/pages/6791.html
+++ b/pages/6791.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,23 +311,34 @@ margin-left: 0em;
 <li><a href='http://en.wikipedia.org/wiki/Paul_Ginsparg'>wikipedia entry</a></li>
 </ul>
 
+<h2 id='writings'>Writings</h2>
+
+<ul>
+<li>
+<p>Paul Ginsparg, <a class='existingWikiWord' href='/nlab/show/Sheldon+Glashow'>Sheldon Glashow</a>, <em>Desperately Seeking Superstrings</em>, Phys.Today 86N5 (1986) 7-9 (<a href='https://arxiv.org/abs/physics/9403001'>arXiv:physics/9403001</a>, <a href='https://physicstoday.scitation.org/doi/10.1063/1.2814991'>doi:10.1063/1.2814991</a>)</p>
+
+<p>on <a class='existingWikiWord' href='/nlab/show/string+theory'>superstring theory</a></p>
+</li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on October 12, 2011 21:30:39 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.211.234.95)
+  <p>
+  Last revised on July  2, 2018 at 14:33:38.
+  See the <a href="https://ncatlab.org/nlab/history/Paul Ginsparg" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Paul+Ginsparg" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/Paul+Ginsparg" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Paul+Ginsparg/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Paul+Ginsparg" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Paul+Ginsparg" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Paul Ginsparg/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Paul+Ginsparg" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Paul+Ginsparg" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Paul+Ginsparg" id="view_source" rel="nofollow">Source</a>
