--- a/pages/11013.html
+++ b/pages/11013.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -316,17 +315,21 @@ margin-left: 0em;
 
 <p><em>Adjointness in Foundations</em>,</p>
 
-<p>(<a href='http://www.emis.de/journals/TAC/reprints/articles/16/tr16abs.html'>TAC</a>), Dialectica 23 (1969), 281-296</p>
+<p>Dialectica 23 (1969), 281-296,</p>
+
+<p>Reprints in Theory and Applications of Categories, No. 16 (2006), pp 1-16 (revised 2006-10-30)</p>
+
+<p>(<a href='http://www.emis.de/journals/TAC/reprints/articles/16/tr16abs.html'>TAC</a>)</p>
 </li>
 </ul>
 
 <p>on <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations of mathematics</a> in <a class='existingWikiWord' href='/nlab/show/logic'>categorical logic</a> and the role of <a class='existingWikiWord' href='/nlab/show/adjoint'>adjoints</a> in the formalization of <a class='existingWikiWord' href='/nlab/show/quantification'>quantifiers</a> (<a class='existingWikiWord' href='/nlab/show/base+change'>base change</a>). The main point is that the logical operations on <a class='existingWikiWord' href='/nlab/show/proposition'>propositions</a></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/existential+quantifier'>existential quantifier</a> <math class='maruku-mathml' display='inline' id='mathml_0ae65d74703afd67ca53d65ac9c3f380c909fcb7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/context+extension'>context extension</a> <math class='maruku-mathml' display='inline' id='mathml_0ae65d74703afd67ca53d65ac9c3f380c909fcb7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/universal+quantifier'>universal quantifier</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/existential+quantifier'>existential quantifier</a> <math class='maruku-mathml' display='inline' id='mathml_81bddfa143ac25da19f6b3f4642856a4765b478a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/context+extension'>context extension</a> <math class='maruku-mathml' display='inline' id='mathml_81bddfa143ac25da19f6b3f4642856a4765b478a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/universal+quantifier'>universal quantifier</a></p>
 
 <p>constitute an <a class='existingWikiWord' href='/nlab/show/adjoint+triple'>adjoint triple</a>. In <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a> this is lifted from operations on propositions to operations on <a class='existingWikiWord' href='/nlab/show/type'>types</a>, where it becomes</p>
 
-<p><a class='existingWikiWord' href='/nlab/show/dependent+sum'>dependent sum</a> <math class='maruku-mathml' display='inline' id='mathml_0ae65d74703afd67ca53d65ac9c3f380c909fcb7_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/context+extension'>context extension</a> <math class='maruku-mathml' display='inline' id='mathml_0ae65d74703afd67ca53d65ac9c3f380c909fcb7_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/dependent+product'>dependent product</a>.</p>
+<p><a class='existingWikiWord' href='/nlab/show/dependent+sum'>dependent sum</a> <math class='maruku-mathml' display='inline' id='mathml_81bddfa143ac25da19f6b3f4642856a4765b478a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/context+extension'>context extension</a> <math class='maruku-mathml' display='inline' id='mathml_81bddfa143ac25da19f6b3f4642856a4765b478a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/dependent+product'>dependent product</a>.</p>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>topos theory</a> and <a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a> this adjoint triple is often know as <em><a class='existingWikiWord' href='/nlab/show/base+change'>base change</a></em>.</p>
 
@@ -342,7 +345,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_0ae65d74703afd67ca53d65ac9c3f380c909fcb7_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_81bddfa143ac25da19f6b3f4642856a4765b478a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -362,19 +365,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July 15, 2017 05:53:34 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.6.113.200)
+  <p>
+  Last revised on July  3, 2018 at 04:51:03.
+  See the <a href="https://ncatlab.org/nlab/history/Adjointness in Foundations" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Adjointness+in+Foundations" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Adjointness+in+Foundations/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Adjointness+in+Foundations" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Adjointness+in+Foundations" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Adjointness+in+Foundations" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Adjointness+in+Foundations/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Adjointness+in+Foundations" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Adjointness+in+Foundations" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Adjointness in Foundations/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Adjointness+in+Foundations" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Adjointness+in+Foundations" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Adjointness+in+Foundations" id="view_source" rel="nofollow">Source</a>
