--- a/pages/8045.html
+++ b/pages/8045.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3999/#Item_88" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,9 +311,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#overview'>Overview</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='overview'>Overview</h2>
 
-<p><strong>Material set theory</strong> (also called <em>membership-based set theory</em>) is a style of <a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a> that contrasts with <a class='existingWikiWord' href='/nlab/show/structural+set+theory'>structural set theory</a>. In a material set theory, the elements of a set exist independently of that set. (The terminology ‘material’, or at least ‘materialistic’, goes back at least to <a href='#Friedman1997'>Friedman 1997</a>.) The standard example is <a class='existingWikiWord' href='/nlab/show/ZFC'>ZFC</a>.</p>
+<p><strong>Material set theory</strong> (also called <em>membership-based set theory</em>) is a style of <a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a> that contrasts with <a class='existingWikiWord' href='/nlab/show/structural+set+theory'>structural set theory</a>. In a material set theory, the <a class='existingWikiWord' href='/nlab/show/element'>elements</a> of a set exist independently of that set. (The terminology ‘material’, or at least ‘materialistic’, goes back at least to <a href='#Friedman1997'>Friedman 1997</a>.) The standard example is <a class='existingWikiWord' href='/nlab/show/ZFC'>ZFC</a>.</p>
 
-<p>Frequently in material set theory one takes everything to be a <a class='existingWikiWord' href='/nlab/show/pure+set'>pure set</a>, including the elements of sets themselves. Therefore, any two sets may be meaningfully compared to ask if they are <a class='existingWikiWord' href='/nlab/show/equality'>equal</a> or if one is a member of the other. As a slight variation (still material set theory), one may also accept ur-elements (or atoms) as elements. The main distinguishing feature of a material set theory is a global membership predicate, whereby it is meaningful to ask, given any object and a set, whether the object is an element of the set.</p>
+<p>Frequently in material set theory one takes everything to be a <a class='existingWikiWord' href='/nlab/show/pure+set'>pure set</a>, including the elements of sets themselves. Therefore, any two sets may be meaningfully compared to ask if they are <a class='existingWikiWord' href='/nlab/show/equality'>equal</a> or if one is a member of the other. As a slight variation (still material set theory), one may also accept ur-elements (or atoms) as elements. The main distinguishing feature of a material set theory is a global membership predicate, whereby it is meaningful to ask, given any object and a set, whether the object is an element of the set. A set’s identity here is determined by its elements, in other words the <a class='existingWikiWord' href='/nlab/show/axiom+of+extensionality'>axiom of extensionality</a> holds.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -334,19 +333,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August  2, 2015 15:44:50 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.113.30.252)
+  <p>
+  Last revised on July  3, 2018 at 06:51:01.
+  See the <a href="https://ncatlab.org/nlab/history/material set theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/material+set+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/material+set+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/material+set+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/material+set+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/material+set+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/material+set+theory/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/material+set+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/material+set+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/material set theory/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/material+set+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/material+set+theory" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/material+set+theory" id="view_source" rel="nofollow">Source</a>
